--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,63 +1,14 @@
 
 # Introduction {#thesis-intro}
 
+## Regulation of gene expression
 
-## Structure of the Intorduction
-- Cell diversity
-- Gene Regulation
-- Enhancers
-    - Enhancer–promoter interaction
-- Techniques to probe the 3D chromatin architecture
-    - Imaging based techniques
-    - 3C based methods
-    - Hi-C 
-    - ChIA-PET
-- Chromatin 3D Structure
-    - Hierarchy of chromatin 3D structure
-        - Chromosomal Territories
-        - A/B-Compartments
-        - TADs
-        - Chromatin Loops
-              - Enhancer-Promoter loops
-              - Gene Loops
-              - Architectural loops
-    - Architectural Proteins
-    - Loop extrusion model
-- Evolution of chromatin architecture
-- Disruption of chromatin architecture
+Each cell in our body originate from the same fertilized stem cell and has therefore virtually the same genome. However, different cell types have distinct morphologies and fulfill diverse functions. This diversity is archived by expressing only a subset of genes to a specific extent for any cell type, developmental state, and environmental condition. Gene expression is therefore complex and controlled on many molecular levels [@Lelli2012]. 
 
-## Cell diversity and regulation of gene expression
+The genomic DNA sequence itself encodes cis-regulatory modules (CRMs) to which transcription factors (TFs) bind by recognizing specific DNA sequence motifs. TFs often form complexes with other proteins and DNA. However, TF binding and CRM assembly require often specific epigenetic states of chromatin. Epigenetic modifications of DNA, such as methylation,  influence the ability of TF to bind DNA at enhancers and promoters. The chromatin structure and accessibility itself also determines if a gene can be transcribed. While so-called pioneering factors can bind closed chromatin that is wrapped around nucleosomes and remodel it to make it accessible for other TFs that require open chromatin and specific post-translational histone modifications to bind enhancers and promoters and regulate target gene expression. 
 
-- Cell diversity
-- Gene Regulation
-
-
-An important mechanism in eukaryotic gene regulation is the binding of
-transcription factors (TFs) to distal regulatory regions such as
-enhancers which perform looping interactions to the transcription
-machinery at gene promoters. Chromatin interactions can be measured by
-chromatin conformation capture (3C) and its high-throughput variations
-such as 4C, 5C, 6C, ChIA-PET and Hi-C [@Dekker2013; @Lieberman-Aiden2009].
-
-While genome-wide Hi-C data is still only available for a limited number
-of cell-types and has limited resolution, it is successfully used to
-re-discover important features of the three-dimensional chromatin
-architecture in the nucleus that is organized on different levels. In
-interphase, chromosomes occupy distinct territories in the
-nucleus [@Cremer2001] and are further organized in mega-base scale
-A/B-compartments that show specific preferential interaction patterns
-and transcriptional activity [@Lieberman-Aiden2009; @Rao2014]. On smaller
-scales topologically associating domains (TADs) were identified using
-Hi-C [@Dixon2012; @Nora2012; @Sexton2012]. These are regions of several
-hundred kb, that have more interactions within themselves than with
-other regions and are separated by boundaries that insulate interactions
-between loci in different TADs. Interestingly, TADs are largely stable
-across cell-types and conserved between mammals [@Dixon2012; @Rao2014; @Dixon2015; @VietriRudan2015]. However, many cell-type
-specific chromatin interaction loops occur within TADs [@Rao2014; @Dixon2015]. 
-This indicates a stable and cell-type invariant chromatin
-architecture on larger scales, such as TADs, and a more dynamic and
-cell-type specific organization of interactions within TADs that connect
-enhancers and TF binding sites to regulated genes.
+Another layer in gene regulation is the three-dimensonal foldig structure of chromatin in the nucleus. 
+However, most of the cell-type specific gene regulation that accounts for cell differentiation in development and morphological diversification in evolution, are driven by activation changes of enhancers [@Long2016].
 
 
 ## Enhancers
@@ -76,10 +27,6 @@ Significantly reduction of the expression of the oncogene *PIMI* could not be ar
 (Enhancers are reviewed in [@Spitz2012] and [@Andrey2017])
 
 ## Methods to probe the 3D chromatin archtiecture
-- Imaging based techniques
-- 3C based methods
-- Hi-C 
-- ChIA-PET
 
 ### Microscopy-based techniques to visuallize the genome in 3D
 Historically, the organization of chromosomes and specific loci within the nucleus have mostly been studied using fluorescent *in situ* hybridization (FISH) experiments.
@@ -134,16 +81,6 @@ While the first Hi-C study produced genome-wide interactions at 1Mb resolution [
 <!-- libraries fo hypbrid DNA products are further digested with a second restiction enzyme and further re-ligated to g -->
 
 ## Hierarchy of chromatin 3D structure
-- Chromosomal Territories
-- A/B-Compartments
-- TADs
-- Chromatin Loops
-    - Enhancer-Promoter loops
-    - Gene Loops
-    - Architectural loops
-- Architectural Proteins
-- (Loop extrusion model)
-- Nucleosomes / 10nm / 30nm fibers
 
 <!-- ---------------------------------------------------------------- -->
 ```{r GenomeHierarchy, fig.cap='(ref:GenomeHierarchy)', out.width='80%', fig.align='center'}
@@ -209,21 +146,8 @@ Importantly, enhancer-promoter interactions seems to be mostly constrained withi
 Alltogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
 
 
-- [X] Definition, number, and size
-- [X] Algorithms to identify TADs
-- Functional features
-  - [X] CTCF binding at boundaries
-  - [X] housekeeping genes at boundaries
-  - enhancer-gene associations within TADs
 
 ### Chromatin loops
-
-- Loop domains
-- Architectural proteins
-- Enhancer-promoter loops
-- Polycomp mediated loops
-- Gene loops
-
 
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
 These engage in long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
@@ -236,7 +160,6 @@ TADs in form cluster by their epi-genomic type into A/B compartments and coalesc
 ## Changes of genome folding in evoltuion and disease genomes
 - Evolution of chromatin architecture
 - Disruption of chromatin architecture
-
 
 
 ## Aims of this thesis
